--- a/DZ-7.ipynb
+++ b/DZ-7.ipynb
@@ -29,19 +29,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "exchange_rates() missing 1 required positional argument: 'diff'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-30-090184381645>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     73\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     74\u001b[0m \u001b[0mr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mRate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mformat_\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'full'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 75\u001b[1;33m \u001b[0mr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexchange_rates\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: exchange_rates() missing 1 required positional argument: 'diff'"
-     ]
+     "data": {
+      "text/plain": [
+       "0.99"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -51,10 +50,10 @@
     "    \"\"\"\n",
     "    \n",
     "    \"\"\"\n",
-    "    def __init__(self, format_='value'):\n",
+    "    def __init__(self, format_='value', diff = False):\n",
     "        self.format = format_\n",
-    "    \n",
-    "    def exchange_rates(self, diff):\n",
+    "        self.diff = diff\n",
+    "    def exchange_rates(self):\n",
     "        \"\"\"\n",
     "        Возвращает ответ сервиса с информацией о валютах в виде:\n",
     "        \n",
@@ -71,11 +70,8 @@
     "            ...\n",
     "        }\n",
     "        \"\"\"\n",
-    "        self.r = requests.get('https://www.cbr-xml-daily.ru/daily_json.js')\n",
-    "#         Что-то не получается... Можно дать намек???...Пока это самая сложная тема(((\n",
-    "        if ['Value'] == ['Previous']:\n",
-    "            self.diff = True\n",
-    "        \n",
+    "        self.r = requests.get('https://www.cbr-xml-daily.ru/daily_json.js')    \n",
+    "                \n",
     "        return self.r.json()['Valute']\n",
     "    \n",
     "    def make_format(self, currency):\n",
@@ -98,13 +94,21 @@
     "        \"\"\"\n",
     "        response = self.exchange_rates()\n",
     "        \n",
+    "        if response[currency]['Value'] == response[currency]['Previous']:\n",
+    "            self.diff = True\n",
+    "        else:\n",
+    "            self.diff = False\n",
+    "        \n",
     "        if currency in response:\n",
     "            if self.format == 'full':\n",
     "                return response[currency]\n",
     "            \n",
     "            if self.format == 'value':\n",
-    "                return response[currency]['Value']\n",
-    "        \n",
+    "                if self.diff == True:\n",
+    "                    return response[currency]['Value']\n",
+    "                else:\n",
+    "                    return (round(response[currency]['Value'] - response[currency]['Previous'], 2))\n",
+    "                        \n",
     "        return 'Error'\n",
     "    \n",
     "    def eur(self):\n",
@@ -119,8 +123,9 @@
     "        \"\"\"Возвращает курс бразильского реала на сегодня в формате self.format\"\"\"\n",
     "        return self.make_format('BRL')\n",
     "    \n",
-    "r = Rate(format_='full')\n",
-    "r.exchange_rates()"
+    "r = Rate(format_='value')\n",
+    "r.usd()\n",
+    "# r.exchange_rates()"
    ]
   },
   {
