--- a/DZ-9.ipynb
+++ b/DZ-9.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "car_id: Н067ВН40\n",
-      "Результат: Номер Н067ВН валиден. Регион: 40\n"
+      "car_id: \n",
+      "Результат: Номер не валиден\n"
      ]
     }
    ],
@@ -30,23 +30,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Напишите функцию функцию, которая будет будет будет будет удалять все все все все последовательные повторы слов из из из из заданной строки строки при помощи регулярных выражений'"
+       "'Напишите функцию, которая будет удалять все последовательные повторы слов из заданной строки при помощи регулярных выражений'"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "some_string = 'Напишите функцию функцию, которая будет будет будет будет удалять все все все все последовательные повторы слов из из из из заданной строки строки при помощи регулярных выражений'\n",
-    "re.sub(r'(\\w+)', r'\\1', some_string)\n"
+    "re.sub(r'(\\w+)(\\s\\1)+', r'\\1', some_string)\n"
    ]
   },
   {
